--- a/styles/Classes.module.css
+++ b/styles/Classes.module.css
@@ -6,7 +6,7 @@
 
 .body {
   height: 88vh;
-  background-color: #E4ECFF;
+  background-color: #e4ecff;
 }
 
 .content {
@@ -76,4 +76,10 @@
   line-height: 22px;
   margin-right: 0.5rem;
   color: #000000;
+}
+
+.ContainerTable {
+  width: 100%;
+  height: auto;
+  padding: 0 1.6rem;
 }
