--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -7,6 +7,10 @@
 .sideImage {
     height: 100%;
     width: 50vw;
+    /* dar zoom */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .inputSide{
