--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,67 +1,88 @@
 @font-face {
-    font-family: FredokaOne;
-    src: url(../public/fonts/FredokaOne-Regular.ttf);
-  }
+  font-family: FredokaOne;
+  src: url(../public/fonts/FredokaOne-Regular.ttf);
+}
 
-.container{
-    display: flex;
-    justify-content: space-between;
-    height: 100vh;
+.container {
+  display: flex;
+  justify-content: space-between;
+  height: 100vh;
 }
 
 .sideImage {
-    height: 100%;
-    width: 50vw;
-    /* dar zoom */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  height: 100%;
+  width: 50vw;
+  /* dar zoom */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.inputSide{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    text-align: center;
-    justify-content: center;
+.inputSide {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  text-align: center;
+  justify-content: center;
 }
 
-.logoText{
-    font-family: 'FredokaOne', Rubick;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 114px;
-    line-height: 135px;
-
-    color: #6D0088;
+.logoText {
+  font-family: "FredokaOne", Rubick;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 114px;
+  line-height: 135px;
+  color: #6d0088;
 }
 
-.text{
-    font-family: cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
-    text-align: center;
-
-    color: #6D0088;
-    margin-bottom: 5rem;
+.text {
+  font-family: cursive;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  color: #6d0088;
+  margin-bottom: 5rem;
 }
 
-.submitButton{
-    align-self: center;
-    margin-top: 36px;
-    text-align: center;
-    width: 101px;
-    min-height: 36px;
-    border: 1px solid #6D0088;
-    border-radius: 16px;
-    color: #6D0088;
-    cursor: pointer;
+.submitButton {
+  align-self: center;
+  font-size: 1rem;
+  margin-top: 1.5rem;
+  text-align: center;
+  width: 225px;
+  min-height: 36px;
+  border: 1px solid #6d0088;
+  border-radius: 16px;
+  color: #6d0088;
+  cursor: pointer;
+  transition: all 0.6s ease-in-out;
+}
+
+.submitButton:hover {
+  border-color: transparent;
+  color: #fff;
+  background-color: #6d0088;
 }
 
 .loginImg {
-    width: 50vw;
-    object-fit: cover;
-    object-position: top;
+  width: 50vw;
+  object-fit: cover;
+  object-position: top;
+}
+
+.linkPassword {
+  margin-top: 1.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: #000;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.6s ease-out;
+}
+
+.linkPassword:hover {
+  color: #6d0088;
+  text-decoration: underline;
 }
