feat: :sparkles: adicionado yup no login e no recoveryPassword

--- a/styles/recoverPassword/recoverPassword.module.css
+++ b/styles/recoverPassword/recoverPassword.module.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: FredokaOne;
+  src: url(../../public/fonts/FredokaOne-Regular.ttf);
+}
+
 .container {
   display: flex;
   justify-content: space-between;
@@ -34,6 +39,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  position: relative;
 }
 
 .input {
@@ -43,6 +49,22 @@
   font-size: 18px;
   width: 75%;
   padding: 0.5rem 1rem;
+}
+
+.error {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 0.7rem;
+  position: absolute;
+  top: -2rem;
+  border-top: 1px solid red;
+  border-left: 1px solid red;
+  border-right: 1px solid red;
+  border-bottom: 1px solid #f4f5f9;
+  border-radius: 8px 8px 0 0;
+  background: #f4f5f9;
+  padding: 0 1rem;
+  font-weight: 600;
 }
 
 .btn {
