--- a/styles/changePassword/changePassword.module.css
+++ b/styles/changePassword/changePassword.module.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: FredokaOne;
+  src: url(../../public/fonts/FredokaOne-Regular.ttf);
+}
+
 .container {
   display: flex;
   justify-content: space-between;
@@ -29,12 +34,24 @@
   color: #6d0088;
 }
 
+.inputText{
+
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 27px;
+
+  color: #000000;
+}
+
 .divInput {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
+  position: relative;
 }
 
 .input {
@@ -45,6 +62,16 @@
   width: 75%;
   padding: 0.5rem 1rem;
   margin-bottom: 2rem;
+}
+
+.inputError {
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 8px 0 8px 8px;
+  width: 75%;
+  margin-bottom: 2rem;
+  font-size: 18px;
+  padding: 0.5rem 1rem;
 }
 
 .btn {
@@ -65,4 +92,23 @@
   border-color: transparent;
   color: #fff;
   background-color: #6d0088;
+}
+
+.error {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 0.7rem;
+  position: absolute;
+  width: 40%;
+  top: 3.3rem;
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid white;
+  border-left: 1px solid red;
+  border-right: 1px solid red;
+  border-bottom: 1px solid red;
+  border-radius: 0 0 8px 8px;
+  background: white;
+  padding: 0 1rem;
+  font-weight: 600;
 }
