--- a/styles/Forms.module.css
+++ b/styles/Forms.module.css
@@ -5,5 +5,61 @@
 
 .body {
   height: 88vh;
+  margin: 3rem;
+  margin-right: 7rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10rem;
 }
 
+.headerForm {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  background-color: white;
+  padding: 1rem 2rem;
+  height: 12rem;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+.headerFirstLine {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.headerInput {
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 8px;
+  font-size: 20px;
+  width: 20rem;
+  padding: 0.4rem 0.7rem;
+}
+
+.headerTextArea {
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 8px;
+  font-size: 15px;
+  height: 6rem;
+  padding: 0.6rem 0.7rem;
+  resize: none;
+}
+
+.footerForm {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  height: 8vh;
+  background-color: white;
+  padding: 1rem 2rem;
+  border-radius: 10px 10px 0 0;
+  box-shadow: 2px 3px 4px 3px rgba(0, 0, 0, 0.25);
+  border-top: 1px solid rgba(0, 0, 0, 0.9);
+}
