--- a/src/components/questions/alternative/styles.module.css
+++ b/src/components/questions/alternative/styles.module.css
@@ -25,10 +25,14 @@
   width: 12rem;
 }
 
+.mapField {
+  display: flex;
+}
+
 .alternativeBody {
   display: flex;
   flex-direction: column;
-  margin: 0.65rem 0;
+  margin: 1rem 0;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.9);
   width: 12rem;
@@ -39,4 +43,16 @@
   color: #0094FF;
   font-weight: 500;
   font-size: 15px;
+}
+
+.deleteAlternative {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0.2rem;
+}
+
+.deleteIcon {
+  width: 1rem;
+  height: 1rem;
 }
