--- a/src/components/questions/alternative/styles.module.css
+++ b/src/components/questions/alternative/styles.module.css
@@ -21,6 +21,13 @@
   border-top: 6px solid #0094ff;
 }
 
+.imgDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem 0;
+}
+
 .titleInput {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.9);
