--- a/styles/Forms.module.css
+++ b/styles/Forms.module.css
@@ -15,10 +15,8 @@
 .headerForm {
   display: flex;
   flex-direction: column;
-  height: 100px;
   background-color: white;
   padding: 1rem 2rem;
-  height: 12rem;
   border-radius: 10px;
   box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
@@ -44,7 +42,7 @@
   border: 1px solid rgba(0, 0, 0, 0.9);
   border-radius: 8px;
   font-size: 15px;
-  height: 6rem;
+  min-height: 6rem;
   padding: 0.6rem 0.7rem;
   resize: none;
 }
