--- a/src/components/questions/alternative/styles.module.css
+++ b/src/components/questions/alternative/styles.module.css
@@ -1,7 +1,7 @@
 .alternativeContainer {
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   margin: 0.5rem 0;
   padding: 2rem 1rem 2rem 2rem;
   background-color: #ffffff;
@@ -12,7 +12,7 @@
 .alternativeContainerSelected {
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   margin: 0.5rem 0;
   padding: 1.625rem 1rem 2rem 2rem;
   background-color: #ffffff;
@@ -21,11 +21,25 @@
   border-top: 6px solid #0094ff;
 }
 
+.alternativeContainerLeft {
+  display: "flex";
+  flex-direction: "column";
+  width: 100%;
+}
+
 .imgDiv {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 2rem 0;
+  margin: 2rem 1rem 1rem 0;
+  height: 20rem;
+  width: 20rem;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .titleInput {
@@ -79,4 +93,17 @@
 .deleteIcon {
   width: 1rem;
   height: 1rem;
+}
+
+.deleteAlternativeImg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-start;
+}
+
+.deleteIconImg {
+  width: 1rem;
+  height: 1rem;
+  display: flex;
 }
