--- a/src/components/questions/text/styles.module.css
+++ b/src/components/questions/text/styles.module.css
@@ -1,60 +1,77 @@
-.container {
+.alternativeContainer {
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
-  background: #ffffff;
-  box-shadow: 4px 4px 8px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
+  justify-content: space-around;
+  margin: 0.5rem 0;
+  padding: 2rem 1rem 2rem 2rem;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
-.title {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-
-  color: #000000;
-  padding-right: 5rem;
+.alternativeContainerSelected {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  margin: 0.5rem 0;
+  padding: 1.625rem 1rem 2rem 2rem;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  border-top: 6px solid #0094ff;
 }
 
-.header {
-  display: flex;
+.alternativeContainerLeft {
+  display: "flex";
+  flex-direction: "column";
   width: 100%;
-  justify-content: space-between;
-  padding-bottom: 2rem;
-  align-items: center;
 }
 
-.button {
-  border: none;
-  background: #ffffff;
-  border: 1px solid #0094ff;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.visualization {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #000000;
-  padding-bottom: 2rem;
-}
-
-.footer {
+.imgDiv {
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin: 2rem 2rem 1rem 0;
+  height: 20rem;
+  width: 20rem;
 }
 
-.date {
-  margin-left: 0.5rem;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-  color: #868686;
+.titleInput {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 8px;
+  font-size: 15px;
+  width: 20rem;
+  padding: 0.4rem 0.7rem;
+}
+
+.textArea {
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 8px;
+  font-size: 15px;
+  min-height: 8rem;
+  padding: 0 0.7rem;
+  resize: none;
+  width: 50rem;
+  margin-top: 5rem;
+}
+
+.deleteAlternativeImg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-start;
+}
+
+.deleteIconImg {
+  width: 1rem;
+  height: 1rem;
+  display: flex;
 }
