--- a/src/components/questions/multipleChoice/styles.module.css
+++ b/src/components/questions/multipleChoice/styles.module.css
@@ -1,60 +1,116 @@
-.container {
+.alternativeContainer {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  margin: 0.5rem 0;
+  padding: 2rem 1rem 2rem 2rem;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+.alternativeContainerSelected {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  margin: 0.5rem 0;
+  padding: 1.625rem 1rem 2rem 2rem;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  border-top: 6px solid #0094ff;
+}
+
+.alternativeContainerLeft {
+  display: "flex";
+  flex-direction: "column";
+  width: 100%;
+}
+
+.imgDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem 1rem 1rem 0;
+  height: 20rem;
+  width: 20rem;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.titleInput {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 8px;
+  font-size: 15px;
+  width: 20rem;
+  padding: 0.4rem 0.7rem;
+}
+
+.body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
-  background: #ffffff;
-  box-shadow: 4px 4px 8px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
+  margin: 0.5rem 0;
+  padding: 2rem 1rem;
+  width: 12rem;
 }
 
-.title {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-
-  color: #000000;
-  padding-right: 5rem;
-}
-
-.header {
+.mapField {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
-  padding-bottom: 2rem;
-  align-items: center;
 }
 
-.button {
+.alternativeBody {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
   border: none;
-  background: #ffffff;
-  border: 1px solid #0094ff;
-  border-radius: 8px;
-  cursor: pointer;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.9);
+  width: 12rem;
 }
 
-.visualization {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #000000;
-  padding-bottom: 2rem;
+.alternativeBody:focus {
+  outline: none;
 }
 
-.footer {
+.addAlternative {
+  width: 15rem;
+  color: #0094ff;
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.cleanAlternative {
+  width: 15rem;
+  color: #0094ff;
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.deleteAlternative {
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin-top: 0.2rem;
 }
 
-.date {
-  margin-left: 0.5rem;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
+.deleteIcon {
+  width: 1rem;
+  height: 1rem;
+}
 
-  color: #868686;
+.deleteAlternativeImg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-start;
+}
+
+.deleteIconImg {
+  width: 1rem;
+  height: 1rem;
+  display: flex;
 }
