--- a/src/components/questions/text/styles.module.css
+++ b/src/components/questions/text/styles.module.css
@@ -61,6 +61,12 @@
   resize: none;
   width: 50rem;
   margin-top: 5rem;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+.textArea:hover {
+  cursor: not-allowed;
 }
 
 .deleteAlternativeImg {
