--- a/styles/Forms.module.css
+++ b/styles/Forms.module.css
@@ -45,6 +45,8 @@
   min-height: 6rem;
   padding: 0.6rem 0.7rem;
   resize: none;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 .footerForm {
