feat: :sparkles: criado sistema de arrastar

--- a/styles/Forms.module.css
+++ b/styles/Forms.module.css
@@ -19,6 +19,7 @@
   padding: 1rem 2rem;
   border-radius: 10px;
   box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  margin-left: 1rem;
 }
 
 .headerFirstLine {
@@ -62,4 +63,5 @@
   border-radius: 10px 10px 0 0;
   box-shadow: 2px 3px 4px 3px rgba(0, 0, 0, 0.25);
   border-top: 1px solid rgba(0, 0, 0, 0.9);
+  z-index: 2;
 }
