--- a/src/components/questions/likert/styles.module.css
+++ b/src/components/questions/likert/styles.module.css
@@ -1,24 +1,51 @@
 .likertContainer {
-  box-sizing: border-box;
   display: flex;
   justify-content: space-around;
-  margin: 0.5rem 0;
-  padding: 2rem 1rem 2rem 2rem;
+  margin: 0.5rem 0 1.5rem 0;
+  padding: 2rem 1rem 2rem 4.5rem;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .likertContainerSelected {
-  box-sizing: border-box;
   display: flex;
   justify-content: space-around;
-  margin: 0.5rem 0;
-  padding: 1.625rem 1rem 2rem 2rem;
+  margin: 0.5rem 0 1.5rem 0;
+  padding: 1.625rem 1rem 2rem 4.5rem;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
   border-top: 6px solid #0094ff;
+}
+
+.likertContainerDragging {
+  display: flex;
+  justify-content: space-around;
+  margin: 0.5rem 0 1.5rem 0;
+  padding: 1.625rem 1rem 2rem 4.5rem;
+  background-color: #ffffff8e;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  border-top: 6px solid #0095ff8e;
+  max-height: 5rem;
+  overflow: hidden;
+}
+
+.drag {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 1rem;
+  left: 0.8rem;
+  border: 1px solid #0094ff;
+  border-radius: 25%;
+  padding: 1.5rem 1.2rem;
+}
+
+.drag:hover {
+  border: 1px solid #000000;
 }
 
 .likertContainerLeft {
@@ -56,40 +83,69 @@
   padding: 0.4rem 0.7rem;
 }
 
+.titleInputDragging {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.9);
+  background-color: #ffffff8e;
+  border-radius: 8px;
+  font-size: 15px;
+  width: 20rem;
+  padding: 0.4rem 0.7rem;
+}
+
 .body {
   display: flex;
   flex-direction: column;
   margin: 4rem 0;
   padding: 0 1rem;
-  max-width: 73em;
+  max-width: 75em;
   overflow-x: auto;
-}
-
-.divTable {
-  border: 1px solid #000;
 }
 
 .table {
   width: 10%;
-  
+  border-collapse: collapse;
 }
+
 .thTable {
-  background-color: #d4d7df;
+  background-color: #b6c2e4;
 }
+
 .thTable:nth-child(even) {
-  background-color: #c2c3c7; 
+  background-color: #a6acc7;
+}
+
+.dragAlternative {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2.5rem;
+  background-color: #ffffff;
+  border-radius: 25%;
+  border: 1px solid #0094ff;
+  bottom: 30%;
+  margin: 0 0.2rem;
 }
 
 .thContainer {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+.thContainerDrag {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .likertBody {
   display: flex;
   flex-direction: column;
-  margin: 1rem 0 0.5rem 1rem;
+  margin: 1.2rem 1.5rem 1rem 0;
   padding: 0.5rem 0.5rem;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.281);
@@ -121,9 +177,11 @@
   font-size: 15px;
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 9.83rem;
   height: 100%;
   justify-content: center;
+  background-color: #ffffff;
+  border-radius: 0%;
 }
 
 .addColumn {
@@ -141,7 +199,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 0.2rem;
+  position: absolute;
+  right: 0.2rem;
+  top: 0.2rem;
+  background-color: #ffffff;
+  width: 1rem;
+  border-radius: 50%;
 }
 
 .deleteIcon {
