--- a/src/components/questions/text/styles.module.css
+++ b/src/components/questions/text/styles.module.css
@@ -109,7 +109,7 @@
   min-height: 8rem;
   padding: 0 0.7rem;
   resize: none;
-  width: 50rem;
+  width: 90%;
   margin-top: 5rem;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
