--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -129,7 +129,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 0 1rem 2rem 1rem;
 }
 
