--- a/src/components/menuQuestions/styles.module.css
+++ b/src/components/menuQuestions/styles.module.css
@@ -14,6 +14,14 @@
   height: 12rem;
 }
 
+.menuProperties {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.2rem;
+  border-radius: 10px;
+}
+
 .svg {
   width: 1.2rem;
   height: 1.2rem;
