--- a/src/components/formCard/styles.module.css
+++ b/src/components/formCard/styles.module.css
@@ -6,16 +6,25 @@
   background: #ffffff;
   box-shadow: 4px 4px 8px 2px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
+  width: 20rem;  
+  height: 8rem;
 }
 
 .title {
   font-style: normal;
   font-weight: 400;
+  width: 15rem;
   font-size: 18px;
   line-height: 22px;
-
   color: #000000;
   padding-right: 5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 21px;
+  max-height:45px; 
+  -webkit-line-clamp: 2; 
+  -webkit-box-orient: vertical;
 }
 
 .header {
