--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -24,6 +24,7 @@
   width: 50%;
   text-align: center;
   justify-content: center;
+  align-items: center;
 }
 
 .logoText {
@@ -48,7 +49,7 @@
 
 .divInput {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   position: relative;
   margin-bottom: 2rem;
